--- a/source/styles/blocks/basic-products.scss
+++ b/source/styles/blocks/basic-products.scss
@@ -36,7 +36,7 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: var(--base-primary, #ff6347);
-  // text-align: center;
+  text-align: center;
 
   @media (min-width: $tablet-width) {
     @include bold-font(12px, 1.33); // $font-size, $line-height
@@ -61,6 +61,7 @@
 
 .basic-products__list--wrapper {
   background-color: var(--bg-lightest-grey, #ff6347);
+  padding: 0 20px;
 
   @media (min-width: $desktop-width) {
     grid-column: 2 /-1;
@@ -68,11 +69,11 @@
 }
 
 .basic-products__title {
-  // display: block;
-  @include bold-font (24px, 36px); // $font-size, $line-height
+  @include bold-font (24px, 1.5); // $font-size, $line-height
   color: var(--base-primary, #ff6347);
   margin: 0;
   text-align: center;
+  margin-bottom: 20px;
 
   @media (min-width: $tablet-width) {
     @include bold-font (42px, 1.52); // $font-size, $line-height
@@ -99,6 +100,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  column-gap: 10px;
   position: relative;
   margin-bottom: 16px;
 
@@ -117,7 +119,7 @@
   font-weight: 600;
   color: var(--black, #ff6347);
   text-align: center;
-  margin: 0 8px 0 0;
+  margin: 0 6px 0 0;
 
   @media (min-width: $desktop-width) {
     text-align: left;
@@ -125,20 +127,26 @@
 }
 
 .basic-products__find--select {
-  @include primary-font (16px, 1.43); // $font-size, $line-height
-  font-weight: 700;
-  text-align: center;
-  color: var(--black, #ff6347);
+  @include semi-bold-font (16px, 1.5); // $font-size, $line-height
+  border: none;
+  font-weight: 600;
+  width: 155px;
+  text-align: left;
+  color: var(--base-primary, #ff6347);
   // background-color: var(--white, #ff6347);
   // padding-top: 40px;
   // padding-bottom: 40px;
 
   @media (min-width: $desktop-width) {
-    @include primary-font (16px, 1.5); // $font-size, $line-height
+    @include semi-bold-font (16px, 1.5); // $font-size, $line-height
     border: none;
     font-weight: 600;
     width: 165px;
     text-align: left;
     color: var(--base-primary, #ff6347);
   }
+}
+
+.basic-products__block {
+  padding: 0 17px;
 }
