--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -8,10 +8,6 @@
   @media (min-width: $desktop-width) {
     padding: 100px 0 120px;
   }
-
-  @media (min-width: $desktop-width) {
-    padding: 100px 0 120px;
-  }
 }
 
 .features__promo {
@@ -21,10 +17,11 @@
   text-transform: uppercase;
   color: var(--base-primary, #ff6347);
   text-align: center;
+  margin-bottom: 5px;
 }
 
 .features__title {
-  @include bold-font (24px, 36px); // $font-size, $line-height
+  @include bold-font (24px, 1.5); // $font-size, $line-height
   text-align: center;
   margin: 0;
   color: var(--black, #ff6347);
@@ -78,7 +75,7 @@
     background-image: var(--icon);
     background-repeat: no-repeat;
     left: 50%;
-    transform: translate(-60%);
+    transform: translate(-50%);
   }
 
   @media (min-width: $tablet-width) {
@@ -142,13 +139,11 @@
 }
 
 .features__name {
-  margin: 0;
-  margin-bottom: 4px;
+  @include bold-font (18px, 1.78); // $font-size, $line-height
+  color: var(--black, #ff6347);
+  margin: 4px 0 6px;
   grid-row: 2 / 3;
   text-align: center;
-
-  @include bold-font (18px, 32px); // $font-size, $line-height
-  color: var(--black, #ff6347);
 
   @media (min-width: $tablet-width) {
     @include bold-font (24px, 36px); // $font-size, $line-height
@@ -172,12 +167,11 @@
 }
 
 .features__description {
+  @include primary-font (14px, 1.43); // $font-size, $line-height
   margin: 0;
   color: var(--black, #ff6347);
   grid-row: 3 / -1;
   text-align: center;
-
-  @include primary-font (14px, 18px); // $font-size, $line-height
 
   @media (min-width: $tablet-width) {
     @include primary-font (16px, 24px); // $font-size, $line-height
