--- a/source/styles/blocks/filters.scss
+++ b/source/styles/blocks/filters.scss
@@ -1,5 +1,5 @@
 .filters {
-  padding: 0 3px;
+  padding: 2px 3px;
 
   @media (min-width: $tablet-width) {
     padding: 0;
@@ -25,6 +25,8 @@
 }
 
 .filters__title {
+  @include semi-bold-font (16px, 1.5); // $font-size, $line-height
+  font-weight: 600;
   margin-bottom: 20px;
   padding: 0;
   font-size: 16px;
@@ -41,8 +43,7 @@
 }
 
 .filters__label {
-  font-size: 16px;
-  line-height: 24px;
+  @include primary-font (16px, 1.5); // $font-size, $line-height
   display: flex;
   flex-wrap: wrap;
   align-items: center;
