--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -20,6 +20,7 @@
   align-items: center;
   align-self: start;
   margin-top: 12px;
+  padding-left: 20px;
 
   @media (min-width: $tablet-width) {
     margin-top: 22px;
