--- a/source/styles/blocks/logo.scss
+++ b/source/styles/blocks/logo.scss
@@ -2,6 +2,11 @@
   text-decoration: none;
   list-style: none;
   grid-column: 1 / 2;
+  // margin-left: 20px;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+  }
 }
 
 .logo__img {
