--- a/source/styles/blocks/pagination.scss
+++ b/source/styles/blocks/pagination.scss
@@ -14,9 +14,11 @@
 }
 
 .pagination__link {
-  min-width: 40px;
+  display: block;
+  width: 40px;
   height: 40px;
-  padding: 8px 20px;
+  padding: 8px 16px;
+  position: relative;
 
   &--active,
   &--active:hover,
@@ -27,13 +29,40 @@
     background-color: transparent;
   }
 
+  &--nav::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 10px;
+    height: 6px;
+    top: 40%;
+    left: 35%;
+    background-color: currentColor;
+    mask-image: url("../../icons/stack.svg#icon-arrow");
+    transform: rotate(90deg);
+  }
+
   &--next::before {
     transform: rotate(-90deg);
+  }
+
+  @media (min-width: $tablet-width) {
+    position: initial;
+    width: min-content;
+    padding: 8px 20px;
+
+    &--nav {
+      padding: 8px 20px;
+    }
+
+    &--nav::before {
+      display: none;
+    }
   }
 }
 
 .pagination__text {
-  @media (max-width: $mobile-width) {
+  @media (max-width: $tablet-width) {
     display: none;
   }
 }
