--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -60,6 +60,10 @@
   padding: 20px 0;
   border-bottom: 1px solid var(--base-secondary, #ff6347);
 
+  @media (min-width: $tablet-width) {
+    padding: 0;
+  }
+
   @media (min-width: $desktop-width) {
     padding: 0;
     padding-top: 48px;
