--- a/source/styles/blocks/basic-products.scss
+++ b/source/styles/blocks/basic-products.scss
@@ -56,7 +56,7 @@
     text-align: center;
     color: var(--base-primary, #ff6347);
     padding: 0;
-    // padding-top: 100px;
+    padding-bottom: 4px;
   }
 }
 
@@ -142,9 +142,6 @@
   width: 155px;
   text-align: left;
   color: var(--base-primary, #ff6347);
-  // background-color: var(--white, #ff6347);
-  // padding-top: 40px;
-  // padding-bottom: 40px;
 
   @media (min-width: $tablet-width) {
     width: 159px;
@@ -154,7 +151,7 @@
     @include semi-bold-font (16px, 1.5); // $font-size, $line-height
     border: none;
     font-weight: 600;
-    width: 165px;
+    width: 160px;
     text-align: left;
     color: var(--base-primary, #ff6347);
   }
