--- a/source/styles/blocks/cards.scss
+++ b/source/styles/blocks/cards.scss
@@ -14,7 +14,7 @@
   @media (min-width: $desktop-width) {
     grid-column: 2/-1;
     grid-template-columns: repeat(3, 1fr);
-    margin-bottom: 60px;
+    margin-bottom: 63px;
   }
 }
 
@@ -30,7 +30,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 50px 30px 32px 28px;
+    padding: 47px 30px 28px;
     // display: flex;
     // flex-direction: column;
     // gap: 12px;
@@ -76,9 +76,9 @@
     @include bold-font(24px, 1.5); // $font-size, $line-height
     text-align: left;
     color: var(--black, #ff6347);
-    padding-top: 0;
+    padding-top: 18px;
     margin-bottom: 0;
-    padding-bottom: 10px;
+    padding-bottom: 4px;
   }
 }
 
