--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -115,7 +115,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 40px;
+    margin-bottom: 41px;
   }
 }
 
@@ -166,5 +166,10 @@
   @media (min-width: $tablet-width) {
     margin-left: 9px;
     margin-right: 23px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 10px;
+    margin-right: 24px;
   }
 }
