--- a/source/styles/blocks/logo.scss
+++ b/source/styles/blocks/logo.scss
@@ -29,12 +29,12 @@
   display: none;
 
   @media (min-width: $desktop-width) {
+    @include primary-font (12px, 1.33); // $font-size, $line-height;
     display: block;
     width: 126px;
     margin-left: 20px;
-    font-size: 12px;
-    line-height: 16px;
     list-style: none;
+    // padding-bottom: 5px;
     color: var(--black, #ff6347);
     text-decoration: none;
   }
