--- a/source/styles/blocks/pagination.scss
+++ b/source/styles/blocks/pagination.scss
@@ -11,6 +11,10 @@
   @media (min-width: $tablet-width) {
     justify-content: flex-end;
   }
+
+  @media (min-width: $desktop-width) {
+    justify-content: flex-end;
+  }
 }
 
 .pagination__link {
@@ -58,6 +62,10 @@
     &--nav::before {
       display: none;
     }
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 8px 19px 8px 15px;
   }
 }
 
