--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -11,8 +11,6 @@
 @import "./blocks/button.scss";
 @import "./blocks/header.scss";
 @import "./blocks/page.scss";
-// @import "./blocks/main-header.scss";
-// @import "./blocks/main-nav.scss";
 @import "./blocks/container.scss";
 @import "./blocks/hero.scss";
 @import "./blocks/hero-swiper.scss";
@@ -27,7 +25,7 @@
 @import "./blocks/range.scss";
 @import "./blocks/checkbox.scss";
 @import "./blocks/footer.scss";
-@import "./blocks/logo";
-@import "./blocks/user-navigation";
-@import "./blocks/site-navigation";
+@import "./blocks/logo.scss";
+@import "./blocks/user-navigation.scss";
+@import "./blocks/site-navigation.scss";
 @import "./blocks/pagination.scss";
