--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -29,3 +29,4 @@
 @import "./blocks/user-navigation.scss";
 @import "./blocks/site-navigation.scss";
 @import "./blocks/pagination.scss";
+@import "./blocks/find.scss";
