--- a/source/styles/blocks/find.scss
+++ b/source/styles/blocks/find.scss
@@ -36,6 +36,7 @@
   width: 155px;
   text-align: left;
   color: var(--base-primary, #ff6347);
+  background-color: var(--bg-lightest-grey, #ff6347);
 
   @media (min-width: $tablet-width) {
     width: 159px;
