делает один файл стилей

--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -30,3 +30,6 @@
 @import "./blocks/site-navigation.scss";
 @import "./blocks/pagination.scss";
 @import "./blocks/find.scss";
+
+/* VENDOR */
+@import "./../vendor/swiper/swiper-bundle.min.css";
